force-app/main/default/objects/Serialized_Import__c/Serialized_Import__c.object-meta.xml
<CustomObject>
    <label>Serialized Import</label>
    <nameField>
        <label>Serialized Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serialized Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>