force-app/main/default/objects/Serialized_Import__c/fields/InventoryType__c.field-meta.xml
<CustomField>
    <fullName>InventoryType__c</fullName>
    <label>InventoryType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>