force-app/main/default/objects/Serialized_Import__c/fields/LotId__c.field-meta.xml
<CustomField>
    <fullName>LotId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LotId</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Serialized Imports</relationshipLabel>
    <relationshipName>Serialized_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>