force-app/main/default/objects/Serialized_Import__c/fields/LotName__c.field-meta.xml
<CustomField>
    <fullName>LotName__c</fullName>
    <label>LotName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>