force-app/main/default/objects/Serialized_Import__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Serialized Imports</relationshipLabel>
    <relationshipName>Serialized_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>