force-app/main/default/objects/Serialized_Import__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>SerialNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>