force-app/main/default/objects/Serialized_Import__c/fields/SerialNumberId__c.field-meta.xml
<CustomField>
    <fullName>SerialNumberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SerialNumberId</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Serialized Imports</relationshipLabel>
    <relationshipName>Serialized_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>