force-app/main/default/objects/Serialized_Import__c/fields/WarehouseId__c.field-meta.xml
<CustomField>
    <fullName>WarehouseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WarehouseId</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Serialized Imports</relationshipLabel>
    <relationshipName>Serialized_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>